recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:1: error: not found: value levels
	if (levels == 0) {
            ^Sierpinski:11: error: not found: value levels
		sierpinski(levels - 1, length / 2.)
                           ^Sierpinski:16: error: not found: value levels
		sierpinski(levels - 1, length / 2.)
                           ^